--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my_project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "rm -rf dist && webpack && webpack serve",
@@ -14,14 +13,27 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.2.12",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.1.0",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
+    "ts-loader": "^9.2.3",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
+    "typescript": "^4.3.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
@@ -38,6 +50,7 @@
     "eslint-webpack-plugin": "^2.5.2",
     "react": "^17.0.2",
     "react-dev-utils": "^11.0.4",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
