--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,9 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react",
-      "@babel/typescript"
+      "@babel/typescript",
+    ],
+    "plugins":[
+      "react-hot-loader/babel"
     ]
   }
